# ChangeLog for dev-python/drpython
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/drpython/ChangeLog,v 1.13 2007/10/03 04:48:15 dirtyepic Exp $

  03 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> drpython-164.ebuild:
  Lock wxpython dependency.  Fix quoting.

  04 Mar 2007; Lukasz Strzygowski <lucass@gentoo.org> drpython-164.ebuild:
  Replaced einfo with elog in pkg_postinst.

*drpython-164 (14 Feb 2007)

  14 Feb 2007; Tiziano Müller <dev-zero@gentoo.org> -drpython-163.ebuild,
  +drpython-164.ebuild:
  Version bump.

*drpython-163 (11 Jan 2007)

  11 Jan 2007; Tiziano Müller <dev-zero@gentoo.org>
  -drpython-3.10.12.ebuild, -drpython-3.10.13.ebuild, +drpython-163.ebuild:
  Version bump. Dropped old versions.

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> drpython-3.10.13.ebuild:
  Mark 3.10.13 ~ia64

  19 Nov 2005; Chris White <chriswhite@gentoo.org> metadata.xml:
  Added japanese metadata.xml translation thanks to Yoshino-san.

  09 Aug 2005; Luis Medinas <metalgod@gentoo.org> drpython-3.10.13.ebuild:
  Added ~amd64 keywords. Closes bug #98439 .

  12 Jul 2005; David Holm <dholm@gentoo.org> drpython-3.10.13.ebuild:
  Added to ~ppc.

  20 May 2005; Rob Cakebread <pythonhead@gentoo.org>
  drpython-3.10.13.ebuild:
  setup.py only seems to work with python-2.4. Manually copy some files. bug#
  91290

*drpython-3.10.13 (04 May 2005)

  04 May 2005; Rob Cakebread <pythonhead@gentoo.org>
  +files/drpython.py-3.10.13.patch, +drpython-3.10.13.ebuild:
  Version bump.

*drpython-3.10.12 (02 May 2005)

  02 May 2005; Rob Cakebread <pythonhead@gentoo.org>
  -files/drpython.py-3.6.10.patch, -files/drpython.py-3.10.6.patch,
  +files/drpython.py-3.10.12.patch, -drpython-3.6.10.ebuild,
  -drpython-3.10.6.ebuild, +drpython-3.10.12.ebuild:
  Version bump. Removed old masked versions.

*drpython-3.10.6 (19 Feb 2005)

  19 Feb 2005; Radoslaw Stachowiak <radek@gentoo.org>