@@ -10,14 +10,19 @@ MD5 8f97fad63e509cc0537b92bedec9c731 files/drpython.py-3.10.13.patch 370
 RMD160 c45064437baffbb7b641e305fb0e76841a4b88c4 files/drpython.py-3.10.13.patch 370
 SHA256 64638ab22115d229e470056aaed5efe3f1744326caed7beefeadad3415258afb files/drpython.py-3.10.13.patch 370
 DIST drpython164.zip 590273 RMD160 adc6e633f7ab2235cddbcab5b990bda457f5ca73 SHA1 e1860c73491e4ce845bea0417e320472a70fa60c SHA256 f154285e5b341e2887883efd858275952568e09e0f71e35b699707c09f21a934
+DIST drpython165.zip 597435 RMD160 cd6669848b121e54304d591008e8fa9475b9d5fb SHA1 069d0424dbe8df3ee34fce921f69e4fad6563629 SHA256 53e081a04962303b820d4cd956fdc83b4b475a217b5e2e22e99988644fe8eace
 EBUILD drpython-164.ebuild 1060 RMD160 2d3901af4e58fb8be09f9292425ee971d0b9fb61 SHA1 1684f740461677cc8f00dfeb3a5749c0a09976b9 SHA256 3254f562d46df6683663461b73e094e5231b98b1fa83392256042f1ad100dcf8
 MD5 2f256c8b0c7d9caaaaf0803caf86421b drpython-164.ebuild 1060
 RMD160 2d3901af4e58fb8be09f9292425ee971d0b9fb61 drpython-164.ebuild 1060
 SHA256 3254f562d46df6683663461b73e094e5231b98b1fa83392256042f1ad100dcf8 drpython-164.ebuild 1060
-MISC ChangeLog 2267 RMD160 8dd6e516fbc38980bffb9dd4aa380bfc27f5e9d3 SHA1 8509d6564a41f34e101ad3fc1e18284e33416d45 SHA256 fff161f810d5e7240a431b68e3276d47b224b1d9c522b8d4d1bcdeb14da7b8f4
-MD5 627de7d62e084beb8c2330f16497f2e3 ChangeLog 2267
-RMD160 8dd6e516fbc38980bffb9dd4aa380bfc27f5e9d3 ChangeLog 2267
-SHA256 fff161f810d5e7240a431b68e3276d47b224b1d9c522b8d4d1bcdeb14da7b8f4 ChangeLog 2267
+EBUILD drpython-165.ebuild 1082 RMD160 45bb6f5eb42880e655577a3c7f0f9ccc9f47ecae SHA1 c7bbc46acfdd4b162cfa90e511570dd555ec0fe7 SHA256 de6f276035682d003d0389e54ae16406ddbd2e2128f8ce92c9f2e6dfa338fb73
+MD5 2d4c55f829d847ea5cf019ee01401a53 drpython-165.ebuild 1082
+RMD160 45bb6f5eb42880e655577a3c7f0f9ccc9f47ecae drpython-165.ebuild 1082
+SHA256 de6f276035682d003d0389e54ae16406ddbd2e2128f8ce92c9f2e6dfa338fb73 drpython-165.ebuild 1082
+MISC ChangeLog 2381 RMD160 33ad1fdb2b955baf0f0d2444037e04a9e1a51da9 SHA1 044fb0829533c019a20cf0318a17b1221057dd29 SHA256 2399cb9d93a85c598ba5662c1ee28e1a69e6642c36319e7d6c0e2a4d92a2d68c
+MD5 fc44b04afcffcd5b6bb717f8f1943145 ChangeLog 2381
+RMD160 33ad1fdb2b955baf0f0d2444037e04a9e1a51da9 ChangeLog 2381
+SHA256 2399cb9d93a85c598ba5662c1ee28e1a69e6642c36319e7d6c0e2a4d92a2d68c ChangeLog 2381
 MISC metadata.xml 616 RMD160 55d32aae74924cd293b2c87b126506ee696aa947 SHA1 26735d0c74bc7033987b8d722fe38261977696f5 SHA256 c40683b55039fafad9ee14c549b3ec4cbcaca6d52b966d884666b0e2becd4744
 MD5 88f55e5d86d6886a75b1f13c95e3c8a2 metadata.xml 616
 RMD160 55d32aae74924cd293b2c87b126506ee696aa947 metadata.xml 616
@@ -25,10 +30,13 @@ SHA256 c40683b55039fafad9ee14c549b3ec4cbcaca6d52b966d884666b0e2becd4744 metadata
 MD5 2a9cb6c836ac47de9ed012ca922ee970 files/digest-drpython-164 226
 RMD160 1cf15e4446205bf0bf241df9607d945b70c31334 files/digest-drpython-164 226
 SHA256 503974fd3308979113de7c2499482fe392952263fe19d038ce7d7c3c97ded70e files/digest-drpython-164 226
+MD5 ba869c26724b278f81214b55623cea5f files/digest-drpython-165 226
+RMD160 aaae7e75e002f3467ba6509dcba5a01038cb5417 files/digest-drpython-165 226
+SHA256 88965b27acded572b20f2ebc1d7c8108916a583c8d46618e7c1acb022d5892f3 files/digest-drpython-165 226
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7-ecc0.1.6 (GNU/Linux)
 
-iD8DBQFHQneTQU4yORhF8iARAkfmAKCN38NnNjyis1oCXy9C1Ku/xAG1AgCgqgrC
-j2ap8me3ArzTmLUsDDo86hI=
-=5rX8
+iD8DBQFHQoKfQU4yORhF8iARAn67AJ4r9dYu3gk8hjlKXkUAeU7Y43jLRACgnJke
+gvii1yW7qPFPGtcgDk+eRT4=
+=dtcf
 -----END PGP SIGNATURE-----
