@@ -1,0 +1,3 @@
+MD5 02bb6a4d771addef978c9005007e6ed9 drpython165.zip 597435
+RMD160 cd6669848b121e54304d591008e8fa9475b9d5fb drpython165.zip 597435
+SHA256 53e081a04962303b820d4cd956fdc83b4b475a217b5e2e22e99988644fe8eace drpython165.zip 597435
