@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/drpython
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/drpython/ChangeLog,v 1.13 2007/10/03 04:48:15 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/drpython/ChangeLog,v 1.14 2007/11/20 06:45:45 hawking Exp $
+
+*drpython-165 (20 Nov 2007)
+
+  20 Nov 2007; Ali Polatel <hawking@gentoo.org> +drpython-165.ebuild:
+  version bump.
 
   03 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> drpython-164.ebuild:
   Lock wxpython dependency.  Fix quoting.
